--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -45,6 +45,10 @@
                         <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
                     </p>
 
+                    <p class="act-request-quotation-label" styles="display: none;">
+                        Quote sent
+                    </p>
+
                     <p class="act-request-message" data-max-chars-desktop="150" data-max-chars-mobile="70">
                         <span class="title">Message from client:</span>
 
