--- a/app/Resources/views/_layout.html.twig
+++ b/app/Resources/views/_layout.html.twig
@@ -191,6 +191,7 @@
         </div>
     </div>
 
+    <script src="http://maps.google.com/maps/api/js?language=en&libraries=places&key=AIzaSyDLK8SupBcU-H0H0SF0PIar5UP-y-DCrTI"></script>
     <script src="{{ asset('js/javascript.js') }}"></script>
     <script src="{{ asset('bundles/actedlegaldocs/js/userCreationAdmin.js') }}"></script>
     <script src="{{ asset('bundles/actedlegaldocs/js/admin.js') }}"></script>
