--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -111,7 +111,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="country">Country</label>
-                                <input id="country" type="text" name="country" class="form-control" placeholder="Country" required>
+
+                                <select class="form-control" id="country" name="country">
+                                    <option value="0" selected>United Kingdom</option>
+                                    <option value="1">Germany</option>
+                                    <option value="2">France</option>
+                                </select>
+                                {#<input id="country" type="text" name="country" class="form-control" placeholder="Country" required>#}
                             </div>
                             <div class="form-group">
                                 <label for="cityReg">City</label>
