--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2472,8 +2472,32 @@ input[disabled] {
         box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em;
     }
 }
+
 .pac-container {
     z-index: 5000;
+}
+
+@supports ( -webkit-appearance: none ) or ( appearance: none ) or ( ( -moz-appearance: none ) and ( mask-type: alpha ) ) {
+    /* Remove select styling */
+    select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+
+        background: #FFF;
+        background-image: linear-gradient(45deg, transparent 50%, #ff793e 50%),
+        linear-gradient(135deg, #ff793e 50%, transparent 50%),
+        linear-gradient(to right, #ff793e, #ff793e);
+        background-position:
+                calc(100% - 10px) 14px,
+                calc(100% - 5px) 14px,
+                100% 0;
+        background-size: 5px 5px, 5px 5px, 0 0;
+        background-repeat: no-repeat;
+        border: 2px solid #e5e5e5;
+        border-radius: 4px;
+        padding: 3px 20px 3px 3px;
+    }
 }
 
 /*Medium screens*/
