Update quotation modal with new styles. 04/11/2016 6:23 PM

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -78,17 +78,30 @@
             </form>
             <form name="quotation_act_info" class="act-info">
                 <div class="row">
-                    <div class="act-title"><input type="checkbox"> Act 1 -Jazz Band <i delete_price="" class="fa fa-trash" aria-hidden="true"></i></div>
+                    <div class="act-title">
+                        <div class="custom-checkbox">
+                            <input id="count_1" name="title-check" value="" type="checkbox">
+                            <label for="count_1"></label>
+                        </div>
+                        Act 1 -Jazz Band
+                        <i delete_price="" class="fa fa-trash" aria-hidden="true"></i>
+                    </div>
                 </div>
                 <div>
                     <div class="row package">
                         <label>3-piece Jazz Band</label>
-                        <input type="checkbox">
+                        <div class="custom-checkbox">
+                            <input id="package_1" name="package-check" value="" type="checkbox">
+                            <label for="package_1"></label>
+                        </div>
                         <a href="#">Add sets</a>
                         <i delete_price="" class="fa fa-trash" aria-hidden="true"></i>
                     </div>
                     <div class="col-md-6 ">
-                        <input type="checkbox">
+                        <div class="custom-checkbox">
+                            <input id="package_2" name="package-check" value="" type="checkbox">
+                            <label for="package_2"></label>
+                        </div>
                         <select>
                             <option>1</option>
                             <option>2</option>
@@ -107,7 +120,10 @@
                         </select>
                     </div>
                     <div class="col-md-6">
-                        <input type="checkbox">
+                        <div class="custom-checkbox">
+                            <input id="package_3" name="package-check" value="" type="checkbox">
+                            <label for="package_3"></label>
+                        </div>
                         <select>
                             <option>1</option>
                             <option>2</option>
@@ -126,7 +142,10 @@
                         </select>
                     </div>
                     <div class="col-md-6">
-                        <input type="checkbox">
+                        <div class="custom-checkbox">
+                            <input id="package_4" name="package-check" value="" type="checkbox">
+                            <label for="package_4"></label>
+                        </div>
                         <select>
                             <option>1</option>
                             <option>2</option>
@@ -145,7 +164,10 @@
                         </select>
                     </div>
                     <div class="col-md-6">
-                        <input type="checkbox">
+                        <div class="custom-checkbox">
+                            <input id="package_5" name="package-check" value="" type="checkbox">
+                            <label for="package_5"></label>
+                        </div>
                         <select>
                             <option>1</option>
                             <option>2</option>
