--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2485,18 +2485,34 @@ input[disabled] {
         appearance: none;
 
         background: #FFF;
-        background-image: linear-gradient(45deg, transparent 50%, #ff793e 50%),
-        linear-gradient(135deg, #ff793e 50%, transparent 50%),
-        linear-gradient(to right, #ff793e, #ff793e);
+
+        background-image:
+                linear-gradient(45deg, transparent 50%, #ff793e 50%),
+                linear-gradient(135deg, #ff793e 50%, transparent 50%),
+                linear-gradient(to right, #ff793e, #ff793e);
         background-position:
-                calc(100% - 10px) 14px,
-                calc(100% - 5px) 14px,
+                calc(100% - 10px) 10px,
+                calc(100% - 5px) 10px,
                 100% 0;
         background-size: 5px 5px, 5px 5px, 0 0;
         background-repeat: no-repeat;
         border: 2px solid #e5e5e5;
         border-radius: 4px;
         padding: 3px 20px 3px 3px;
+        margin: 0 2.5px 0 2.5px;
+    }
+
+    select:active {
+        background-image:
+                linear-gradient(135deg, transparent 50%, #ff793e 50%),
+                linear-gradient(45deg, #ff793e 50%, transparent 50%),
+                linear-gradient(to right, #ff793e, #ff793e);
+        background-position:
+                calc(100% - 10px) 8px,
+                calc(100% - 5px) 8px,
+                100% 0;
+        background-size: 5px 5px, 5px 5px, 0 0;
+        background-repeat: no-repeat;
     }
 }
 
