--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/registration.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/registration.css
@@ -354,12 +354,18 @@
     height: 26px;
 }
 
-.contact-details .form-group input.error {
-    border: 2px solid #f97c7d;
+.form-group input.error {
+    border: 2px solid #f97c7d !important;
+    outline: 0!important;
+    box-shadow: 0px 0px 8px 0px #f97c7d;
 }
 
-.contact-details .form-group input.valid {
-    border: 2px solid #809eff;
+.form-group input.error + label.error {
+    opacity: 1;
+}
+
+.form-group input.valid {
+    border: 2px solid #809eff !important;
 }
 
 .contact-details .form-group input.valid + label.error + label.icon:after,
