--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/settings-page.css
@@ -56,6 +56,7 @@
     overflow: visible;
     float: left;
     padding: 0 10px;
+    margin: 0;
     width: 350px;
 }
 .settings .box:first-child{width: 250px;}
@@ -100,6 +101,7 @@
     outline: none;
     width: 70%;
     font-size: 14px;
+    display: inline-block;
 }
 .settings  input[type="text"]:focus,
 .settings  input[type="password"]:focus,
@@ -198,7 +200,7 @@
 .settings .box label.error {
     opacity: 0;
     position: absolute;
-    top: 100%;
+    top: 40px;
     left: 10px;
     z-index: 1;
     color: red;
