--- a/src/Acted/LegalDocsBundle/Resources/public/css/parts/requirements.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/parts/requirements.css
@@ -132,7 +132,7 @@
     /*-webkit-box-shadow: none;*/
     /*box-shadow: none;*/
 /*}*/
-.requirement-form .btn-upload{
+.requirement-form .btn-upload {
     background: #fff;
     border: none;
     border-radius: 6px;
@@ -145,10 +145,20 @@
     outline: none;
     float: left;
     margin-right: 10px;
+    line-height: 28px;
 }
 .requirement-form .btn-upload:active{
     background: #eee;
     background: rgba(238, 238, 238, 1);
+}
+.requirement-form .btn-upload + input {
+    display: none;
+}
+.requirement-form label.btn-upload {
+    font-family: LatoRegular;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 0;
 }
 .requirement-form  .jFiler-items{overflow: hidden;}
 .requirement-form .items-list{
@@ -269,18 +279,15 @@
 }
 
 .requirement-form .progress-bar-line {
-    margin: 60px 0 0 0;
+    margin: 18px 0 0 0;
+    width: 0%;
+    height: 20px;
     background-color: #FFF;
     font-size: 14px;
     line-height: 20px;
     text-align: center;
     -webkit-transition: width .6s ease;
     transition: width .6s ease;
-}
-
-.requirement-form progress::-webkit-progress-bar {
-    color: #FFF;
-    background: #FFF;
 }
 
 @media (max-width: 991px){
