Update a Google autocomplete functional. (Resolved problem with city coords)

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quotationModal.html.twig
@@ -15,9 +15,9 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group">
                             <label for="quot_country">Country</label>
                             <select class="form-control" id="quot_country" name="country">
-                                <option value="0" selected>United Kingdom</option>
-                                <option value="1">Germany</option>
-                                <option value="2">France</option>
+                                <option value="United Kingdom" selected>United Kingdom</option>
+                                <option value="Germany">Germany</option>
+                                <option value="France">France</option>
                             </select>
                             {#<input type="text" class="form-control" id="quot_country" placeholder="United Kingdom" name="country">#}
                         </div>
