--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -35,9 +35,9 @@
                         <div class="col-lg-offset-1 col-lg-4 form-group">
                             <label for="event_country">Country</label>
                             <select class="form-control" id="event_country" name="country">
-                                <option value="0" selected>United Kingdom</option>
-                                <option value="1">Germany</option>
-                                <option value="2">France</option>
+                                <option value="United Kingdom" selected>United Kingdom</option>
+                                <option value="Germany">Germany</option>
+                                <option value="France">France</option>
                             </select>
 
                             {#<select data-class="selections-white" name="country" id="event_country">#}
