--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -113,9 +113,9 @@
                                 <label for="country">Country</label>
 
                                 <select class="form-control" id="country" name="country">
-                                    <option value="0" selected>United Kingdom</option>
-                                    <option value="1">Germany</option>
-                                    <option value="2">France</option>
+                                    <option value="United Kingdom" selected>United Kingdom</option>
+                                    <option value="Germany">Germany</option>
+                                    <option value="France">France</option>
                                 </select>
                                 {#<input id="country" type="text" name="country" class="form-control" placeholder="Country" required>#}
                             </div>
