--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
@@ -119,9 +119,9 @@
                                 <label for="country">Country</label>
 
                                 <select class="form-control" id="country" name="country">
-                                    <option value="0" selected>United Kingdom</option>
-                                    <option value="1">Germany</option>
-                                    <option value="2">France</option>
+                                    <option value="United Kingdom" selected>United Kingdom</option>
+                                    <option value="Germany">Germany</option>
+                                    <option value="France">France</option>
                                 </select>
 
                                 {#<input type="text" name="country" id="country" class="form-control">#}
